<resources>
    <string name="app_name">FootballMatchSchedule</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="vs">VS</string>
    <string name="detail_activity">Match Detail</string>
    <string name="favorites">Favorites</string>
    <string name="next_match">Next Match</string>
    <string name="last_match">Last Match</string>
    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>

    <string name="match">Match</string>
    <string name="teams">Teams</string>
    <string name="football_match">Football Match</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="height_m">Height (m)</string>
    <string name="detail_player_activity">Detail Player</string>
    <string name="detail_team_activity">Detail Team</string>
    <string name="menu_title_search">Search</string>
    <string name="search_hint">Search</string>
    <string name="search_match_activity">Search Match</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
</resources>
