<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".detail.match.DetailMatchActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_scrollFlags="scroll|enterAlways"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Date"
            android:textSize="16sp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_team_home"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_launcher_background"/>

                <TextView
                    android:id="@+id/tv_team_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Team Home"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_score_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="3"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vs"
                    android:textSize="18sp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:id="@+id/tv_score_away"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_team_away"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_launcher_background"/>

                <TextView
                    android:id="@+id/tv_team_away"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Team Home"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lineups"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goal_keeper"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/tv_goal_keeper_home"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Goal Keeper Home"/>

                    <TextView
                        android:id="@+id/tv_goal_keeper_away"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Goal Keeper Home"
                        android:gravity="end"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorGray"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defense"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/tv_defense_home"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Defense Home"/>

                    <TextView
                        android:id="@+id/tv_defense_away"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Defense Away"
                        android:gravity="end"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorGray"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/midfield"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/tv_midfield_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Midfield Home"/>

                    <TextView
                        android:id="@+id/tv_midfield_away"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Midfield Away"
                        android:gravity="end"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorGray"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forward"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/tv_forward_home"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Forward Home"/>

                    <TextView
                        android:id="@+id/tv_forward_away"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Forward Away"
                        android:gravity="end"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorGray"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/substitutes"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/tv_substitutes_home"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Substitutes Home"/>

                    <TextView
                        android:id="@+id/tv_substitutes_away"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Subtitutes Away"
                        android:gravity="end"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>